--- a/tpl/module_tpl/index.html
+++ b/tpl/module_tpl/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>tpl单页面</title>
+  <title>tpl多页面</title>
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
